Add Logo, stylize pictures & add alt tags to them

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1  ">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> -->
         <link rel="stylesheet" href="css/style.css">
         <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -17,7 +18,8 @@
         <div class="container-fluid">
             <header class="row">
                 <div class="col-sm-6">
-                    <img class="title-logo" src="https://i.ytimg.com/vi/VVNPgdWyNKc/hqdefault.jpg" alt="logo">
+                    <!-- <img class="title-logo" src="https://i.ytimg.com/vi/VVNPgdWyNKc/hqdefault.jpg" alt="logo"> -->
+                    <img class="title-logo" src="logo/logoX4.svg" alt="Orange Sun Gear Logo">
                 </div>
                 <div class="col-sm-6 text-uppercase text-right">
                     <h1 class="text-thin title-super">Matt Hedlund</h1>
@@ -70,25 +72,33 @@
                         <!-- <source media="(min-width: 1000px)" srcset="images/tropical-hotel-330_large_1x.jpg 1x, images/tropical-hotel-660_large_2x.jpg 2x"> -->
     			        <!-- <source media="(min-width: 500px)" srcset="kookaburra_medium_1x.jpg 1x, kookaburra_medium_2x.jpb 2x"> -->
 
-                    <img class="img-responsive" src="images/tropical-hotel-500_large_1x.jpg" srcset="images/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Appify Image" data-toggle="modal" data-target="#project1">
+                    <img class="img-responsive img-rounded" src="images/tropical-hotel-500_large_1x.jpg" srcset="images/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
+
+                     <!-- data-toggle="modal" data-target="#project1"> -->
                     <!-- </picture> -->
-                    <h3 class="text-uppercase">Appify</h3>
-                    <p>https://github.com/udacity/appify</p>
+                    <h3 class="text-uppercase">Alacati</h3>
+                    <p>https://github.com/udacity/alacati</p>
                 </div>
                 <div class="col-md-4 col-sm-6">
 
-                    <img class="img-responsive" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="Sunflower Image">
-                    <h3 class="text-uppercase">Sunflower</h3>
-                    <p>https://guthub.com/udacity/sunflower</p>
+                    <img class="img-responsive img-rounded" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
+                    <h3 class="text-uppercase">Cesme</h3>
+                    <p>https://guthub.com/udacity/cesme</p>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <!-- <source media="(min-width: 1000px)" srcset="images/istanbul-mosque-330_large_1x.jpg 1x, images/istanbul-mosque-660_large_2x.jpg 2x"> -->
 
-                    <img class="img-responsive" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Bokeh Image">
-                    <h3 class="text-uppercase">Bokeh</h3>
-                    <p>https://github.com/udacity/bokeh</p>
+                    <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
+                    <h3 class="text-uppercase">Istanbul</h3>
+                    <p>https://github.com/udacity/istanbul</p>
                 </div>
             </section>
+            <div class="row">
+                <div class="col-md-12">
+                    <hr>
+                </div>
+
+            </div>
             <footer class="row">
                 <div class="col-md-12 social-links">
                     <p>Visit my profile on LinkedIN: </p>
