Change font family and color, remove capitalization

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> -->
+        <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300" rel="stylesheet"> -->
+        <!-- <link href="https://fonts.googleapis.com/css?family=Assistant:100,200,300" rel="stylesheet"> -->
+        <link <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -21,8 +24,8 @@
                     <!-- <img class="title-logo" src="https://i.ytimg.com/vi/VVNPgdWyNKc/hqdefault.jpg" alt="logo"> -->
                     <img class="title-logo" src="logo/logoX4.svg" alt="Orange Sun Gear Logo">
                 </div>
-                <div class="col-sm-6 text-uppercase text-right">
-                    <h1 class="text-thin title-super">Matt Hedlund</h1>
+                <div class="col-sm-6 text-right">
+                    <h1 class="name">Matt Hedlund</h1>
                     <h4>Front-End Dev</h3>
 
                 </div>
@@ -45,7 +48,7 @@
 
 			            <source media="(min-width: 751px)" srcset="images/mediterraneanAlt-1200_large_1x.jpg 1x, images/mediterraneanAlt-2400_large_2x.jpg 2x">
 
-			            <img class="img-responsive" src="images/mediterraneanAlt-1200_large_1x.jpg" alt="Med View">
+			            <img class="img-responsive" src="images/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Agean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
 
 
 
@@ -62,35 +65,40 @@
             </div>
             <div class="row">
                 <div class="col-md-12 featured-banner">
-                    <h2>Featured Work</h3>
+                    <h2>Featured Project Themes</h3>
                 </div>
 
             </div>
             <section class="row work-examples">
                 <div class="col-md-4 col-sm-6">
+                    <a href="https://en.wikipedia.org/wiki/Alaçatı">
                     <!-- <picture> -->
                         <!-- <source media="(min-width: 1000px)" srcset="images/tropical-hotel-330_large_1x.jpg 1x, images/tropical-hotel-660_large_2x.jpg 2x"> -->
     			        <!-- <source media="(min-width: 500px)" srcset="kookaburra_medium_1x.jpg 1x, kookaburra_medium_2x.jpb 2x"> -->
 
-                    <img class="img-responsive img-rounded" src="images/tropical-hotel-500_large_1x.jpg" srcset="images/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
+                        <img class="img-responsive img-rounded" src="images/tropical-hotel-500_large_1x.jpg" srcset="images/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
 
-                     <!-- data-toggle="modal" data-target="#project1"> -->
-                    <!-- </picture> -->
-                    <h3 class="text-uppercase">Alacati</h3>
-                    <p>https://github.com/udacity/alacati</p>
+                         <!-- data-toggle="modal" data-target="#project1"> -->
+                        <!-- </picture> -->
+                        <h3 class="portfolio-name">Alacati</h3>
+                        <p>https://en.wikipedia.org/wiki/Alaçatı</p>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
-
-                    <img class="img-responsive img-rounded" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
-                    <h3 class="text-uppercase">Cesme</h3>
-                    <p>https://guthub.com/udacity/cesme</p>
+                    <a href="https://en.wikipedia.org/wiki/Çeşme">
+                        <img class="img-responsive img-rounded" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
+                        <h3 class="portfolio-name">Cesme</h3>
+                        <p>https://en.wikipedia.org/wiki/Çeşme</p>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <!-- <source media="(min-width: 1000px)" srcset="images/istanbul-mosque-330_large_1x.jpg 1x, images/istanbul-mosque-660_large_2x.jpg 2x"> -->
+                    <a href="https://en.wikipedia.org/wiki/Istanbul">
+                        <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
+                        <h3 class="portfolio-name">Istanbul</h3>
+                        <p>https://en.wikipedia.org/wiki/Istanbul</p>
+                    </a>
 
-                    <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
-                    <h3 class="text-uppercase">Istanbul</h3>
-                    <p>https://github.com/udacity/istanbul</p>
                 </div>
             </section>
             <div class="row">
@@ -113,7 +121,7 @@
 
 
         <!-- Modal -->
-    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -128,6 +136,6 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     </body>
 </html>
