Change style of <p> and <h#> elements

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             </div>
             <div class="row">
-                <div class="col-md-12 featured-banner">
+                <div class="col-md-12 featured-annoucer">
                     <h2>Featured Project Themes</h3>
                 </div>
 
@@ -81,14 +81,14 @@
                          <!-- data-toggle="modal" data-target="#project1"> -->
                         <!-- </picture> -->
                         <h3 class="portfolio-name">Alacati</h3>
-                        <p>https://en.wikipedia.org/wiki/Alaçatı</p>
+                        <p class="link-addr">https://en.wikipedia.org/wiki/Alaçatı</p>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <a href="https://en.wikipedia.org/wiki/Çeşme">
                         <img class="img-responsive img-rounded" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
                         <h3 class="portfolio-name">Cesme</h3>
-                        <p>https://en.wikipedia.org/wiki/Çeşme</p>
+                        <p class="link-addr">https://en.wikipedia.org/wiki/Çeşme</p>
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6">
@@ -96,7 +96,7 @@
                     <a href="https://en.wikipedia.org/wiki/Istanbul">
                         <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
                         <h3 class="portfolio-name">Istanbul</h3>
-                        <p>https://en.wikipedia.org/wiki/Istanbul</p>
+                        <p class="link-addr">https://en.wikipedia.org/wiki/Istanbul</p>
                     </a>
 
                 </div>
