Add LinkedIn social icon

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1  ">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-        <!-- <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet"> -->
-        <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300" rel="stylesheet"> -->
-        <!-- <link href="https://fonts.googleapis.com/css?family=Assistant:100,200,300" rel="stylesheet"> -->
+
         <link <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script type="text/javascript" src="js/jquery-3.1.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=brandico">
 
 
     </head>
@@ -37,7 +36,7 @@
                 </div>
 
             </div>
-            <div class="row">
+            <section class="row">
 
                 <picture class="col-md-12 banner-image">
                     <!-- <picture> -->
@@ -62,13 +61,13 @@
                     <img class="img-responsive" src="images/mediterraneanAlt-CropM-1000_medium_1x.jpg" srcset="images/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, images/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x" alt="Med View">
                 </div> -->
 
-            </div>
-            <div class="row">
+            </section>
+            <section class="row">
                 <div class="col-md-12 featured-annoucer">
                     <h2>Featured Project Themes</h3>
                 </div>
 
-            </div>
+            </section>
             <section class="row work-examples">
                 <div class="col-md-4 col-sm-6">
                     <a href="https://en.wikipedia.org/wiki/Alaçatı">
@@ -109,8 +108,12 @@
             </div>
             <footer class="row">
                 <div class="col-md-12 social-links">
-                    <p>Visit my profile on LinkedIN: </p>
 
+                    <p>To learn more visit me on LinkedIn: </p>
+                    <a href="https://www.linkedin.com/in/matthewhedlund/">
+
+                        <span class="brandico-linkedin-rect"></span>
+                    </a>
                 </div>
             </footer>
 
