Set background color & final element spacing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             </header>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 top-rule">
                     <hr>
                 </div>
 
@@ -69,7 +69,7 @@
 
             </section>
             <section class="row work-examples">
-                <div class="col-md-4 col-sm-6">
+                <article class="col-md-4 col-sm-6 project alacati-prj">
                     <a href="https://en.wikipedia.org/wiki/Alaçatı">
                     <!-- <picture> -->
                         <!-- <source media="(min-width: 1000px)" srcset="images/tropical-hotel-330_large_1x.jpg 1x, images/tropical-hotel-660_large_2x.jpg 2x"> -->
@@ -82,15 +82,15 @@
                         <h3 class="portfolio-name">Alacati</h3>
                         <p class="link-addr">https://en.wikipedia.org/wiki/Alaçatı</p>
                     </a>
-                </div>
-                <div class="col-md-4 col-sm-6">
+                </article>
+                <article class="col-md-4 col-sm-6 project cesme-prj">
                     <a href="https://en.wikipedia.org/wiki/Çeşme">
                         <img class="img-responsive img-rounded" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
                         <h3 class="portfolio-name">Cesme</h3>
                         <p class="link-addr">https://en.wikipedia.org/wiki/Çeşme</p>
                     </a>
-                </div>
-                <div class="col-md-4 col-sm-6">
+                </article>
+                <article class="col-md-4 col-sm-6 project instanbul-prj">
                     <!-- <source media="(min-width: 1000px)" srcset="images/istanbul-mosque-330_large_1x.jpg 1x, images/istanbul-mosque-660_large_2x.jpg 2x"> -->
                     <a href="https://en.wikipedia.org/wiki/Istanbul">
                         <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
@@ -98,10 +98,10 @@
                         <p class="link-addr">https://en.wikipedia.org/wiki/Istanbul</p>
                     </a>
 
-                </div>
+                </article>
             </section>
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 bottom-rule">
                     <hr>
                 </div>
 
@@ -110,7 +110,7 @@
                 <div class="col-md-12 social-links">
 
                     <p>To learn more visit me on LinkedIn: </p>
-                    <a href="https://www.linkedin.com/in/matthewhedlund/">
+                    <a href="https://www.linkedin.com/">
 
                         <span class="brandico-linkedin-rect"></span>
                     </a>
