Add underline "featured project themes"

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <body>
         <div class="container-fluid">
             <header class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 site-logo">
                     <!-- <img class="title-logo" src="https://i.ytimg.com/vi/VVNPgdWyNKc/hqdefault.jpg" alt="logo"> -->
-                    <img class="title-logo" src="logo/logoX4.svg" alt="Orange Sun Gear Logo">
+                    <img class="header-logo" src="logo/logoX4.svg" alt="Orange Sun Gear Logo">
                 </div>
-                <div class="col-sm-6 text-right">
+                <div class="col-sm-6 name-title">
                     <h1 class="name">Matt Hedlund</h1>
                     <h4>Front-End Dev</h3>
 
                 </div>
 
             </header>
-            <div class="row">
-                <div class="col-md-12 top-rule">
+            <section class="row">
+                <div class="col-md-12 header-rule">
                     <hr>
                 </div>
 
-            </div>
+            </section>
             <section class="row">
 
                 <picture class="col-md-12 banner-image">
@@ -64,7 +64,7 @@
             </section>
             <section class="row">
                 <div class="col-md-12 featured-annoucer">
-                    <h2>Featured Project Themes</h3>
+                    <h2><u>Featured Project Themes</u></h2>
                 </div>
 
             </section>
@@ -100,12 +100,12 @@
 
                 </article>
             </section>
-            <div class="row">
-                <div class="col-md-12 bottom-rule">
+            <section class="row">
+                <div class="col-md-12 footer-rule">
                     <hr>
                 </div>
 
-            </div>
+            </section>
             <footer class="row">
                 <div class="col-md-12 social-links">
 
