remove excess html (that was commented out)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <div class="container-fluid">
             <header class="row">
                 <div class="col-sm-6 site-logo">
-                    <!-- <img class="title-logo" src="https://i.ytimg.com/vi/VVNPgdWyNKc/hqdefault.jpg" alt="logo"> -->
-                    <img class="header-logo" src="logo/logoX4.svg" alt="Orange Sun Gear Logo">
+                    <img class="header-logo" src="logo/logoX4.svg" alt="Orange sun gear logo">
                 </div>
                 <div class="col-sm-6 name-title">
                     <h1 class="name">Matt Hedlund</h1>
@@ -39,7 +38,6 @@
             <section class="row">
 
                 <picture class="col-md-12 banner-image">
-                    <!-- <picture> -->
 
                         <source media="(max-width: 600px)" srcset="images/mediterraneanAlt-CropS-800_small_1x.jpg 1x, images/mediterraneanAlt-CropS-1600_small_2x.jpg 2x">
 
@@ -53,13 +51,8 @@
 
 
 
-                        <!-- <img class="img-responsive" src="images/mediterraneanAlt-1200_large_1x.jpg" srcset="images/mediterraneanAlt-1200_large_1x.jpg 1x, images/mediterraneanAlt-2400_large_2x.jpg 2x" alt="Med View"> -->
-                    <!-- </picture> -->
                 </picture>
 
-                <!-- <div class="col-md-12 medium">
-                    <img class="img-responsive" src="images/mediterraneanAlt-CropM-1000_medium_1x.jpg" srcset="images/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, images/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x" alt="Med View">
-                </div> -->
 
             </section>
             <section class="row">
@@ -71,14 +64,10 @@
             <section class="row work-examples">
                 <article class="col-md-4 col-sm-6 project alacati-prj">
                     <a href="https://en.wikipedia.org/wiki/Alaçatı">
-                    <!-- <picture> -->
-                        <!-- <source media="(min-width: 1000px)" srcset="images/tropical-hotel-330_large_1x.jpg 1x, images/tropical-hotel-660_large_2x.jpg 2x"> -->
-    			        <!-- <source media="(min-width: 500px)" srcset="kookaburra_medium_1x.jpg 1x, kookaburra_medium_2x.jpb 2x"> -->
+
 
                         <img class="img-responsive img-rounded" src="images/tropical-hotel-500_large_1x.jpg" srcset="images/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
 
-                         <!-- data-toggle="modal" data-target="#project1"> -->
-                        <!-- </picture> -->
                         <h3 class="portfolio-name">Alacati</h3>
                         <p class="link-addr">https://en.wikipedia.org/wiki/Alaçatı</p>
                     </a>
@@ -91,7 +80,7 @@
                     </a>
                 </article>
                 <article class="col-md-4 col-sm-6 project instanbul-prj">
-                    <!-- <source media="(min-width: 1000px)" srcset="images/istanbul-mosque-330_large_1x.jpg 1x, images/istanbul-mosque-660_large_2x.jpg 2x"> -->
+
                     <a href="https://en.wikipedia.org/wiki/Istanbul">
                         <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
                         <h3 class="portfolio-name">Istanbul</h3>
@@ -109,10 +98,14 @@
             <footer class="row">
                 <div class="col-md-12 social-links">
 
-                    <p>To learn more visit me on LinkedIn: </p>
+                    <p>To learn more visit me on online: </p>
                     <a href="https://www.linkedin.com/">
 
                         <span class="brandico-linkedin-rect"></span>
+                    </a>
+                    <a href="https://github.com">
+                        <span class="brandico-github-text"></span>
+
                     </a>
                 </div>
             </footer>
@@ -123,22 +116,5 @@
 
 
 
-        <!-- Modal -->
-    <!-- <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
-                </div>
-                <div class="modal-body">
-                    <img class="img-responsive" src="http://placekitten.com/g/350/350">
-                    This was my first project in this class. I learned a lot about HTML and CSS.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div> -->
     </body>
 </html>
