Fix html errors from online validator

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>Boot Project</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1  ">
+        <meta name="viewport" content="width=device-width, initial-scale=1 ">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-        <link <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300" rel="stylesheet">
         <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=brandico">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -19,11 +19,11 @@
                 </div>
                 <div class="col-sm-6 name-title">
                     <h1 class="name">Matt Hedlund</h1>
-                    <h4>Front-End Dev</h3>
+                    <h4>Front-End Dev</h4>
                 </div>
             </header>
-            <section class="row">
-                <div class="col-md-12 header-rule">
+            <section class="row header-rule">
+                <div class="col-md-12">
                     <hr>
                 </div>
             </section>
@@ -63,8 +63,8 @@
                     </a>
                 </article>
             </section>
-            <section class="row">
-                <div class="col-md-12 footer-rule">
+            <section class="row footer-rule">
+                <div class="col-md-12">
                     <hr>
                 </div>
             </section>
