--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </section>
             <section class="row">
                 <div class="col-md-12 featured-annoucer">
-                    <h2><u>Featured Project Themes</u></h2>
+                    <h2><u class="featured-format">Featured Project Themes</u></h2>
                 </div>
             </section>
             <section class="row work-examples">
@@ -70,11 +70,11 @@
             </section>
             <footer class="row">
                 <div class="col-md-12 social-links">
-                    <p>To learn more visit me on online: </p>
-                    <a href="https://www.linkedin.com/">
+                    <p class="s-text-format">To learn more visit me on online:</p>
+                    <a class="s-link-format" href="https://www.linkedin.com/">
                         <span class="brandico-linkedin-rect"></span>
                     </a>
-                    <a href="https://github.com">
+                    <a class="s-link-format" href="https://github.com">
                         <span class="brandico-github-text"></span>
                     </a>
                 </div>
