--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <header class="row">
                 <div class="col-sm-6 site-logo">
-                    <img class="header-logo" src="logo/logoX4.svg" alt="Orange sun gear logo">
+                    <img class="header-logo" src="logo/logoX4.svg" alt="orange sun gear logo">
                 </div>
                 <div class="col-sm-6 name-title">
                     <h1 class="name">Matt Hedlund</h1>
@@ -32,7 +32,7 @@
                         <source media="(max-width: 600px)" srcset="images/mediterraneanAlt-CropS-800_small_1x.jpg 1x, images/mediterraneanAlt-CropS-1600_small_2x.jpg 2x">
 			            <source media="(max-width: 750px)" srcset="images/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, images/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x">
 			            <source media="(min-width: 751px)" srcset="images/mediterraneanAlt-1200_large_1x.jpg 1x, images/mediterraneanAlt-2400_large_2x.jpg 2x">
-			            <img class="img-responsive" src="images/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Agean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
+			            <img class="img-responsive" src="images/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Aegean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
                 </picture>
             </section>
             <section class="row">
