--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Boot Project</title>
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <title>Matt's Portfolio Project</title>
         <meta name="viewport" content="width=device-width, initial-scale=1 ">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300" rel="stylesheet">
         <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=brandico">
         <link rel="stylesheet" href="css/style.css">
@@ -15,6 +14,7 @@
         <div class="container-fluid">
             <header class="row">
                 <div class="col-sm-6 site-logo">
+                    <!-- vector graphic logo that will resize without distortion to fit any sized device -->
                     <img class="header-logo" src="logo/logoX4.svg" alt="orange sun gear logo">
                 </div>
                 <div class="col-sm-6 name-title">
@@ -29,10 +29,11 @@
             </section>
             <section class="row">
                 <picture class="col-md-12 banner-image">
-                        <source media="(max-width: 600px)" srcset="images/mediterraneanAlt-CropS-800_small_1x.jpg 1x, images/mediterraneanAlt-CropS-1600_small_2x.jpg 2x">
-			            <source media="(max-width: 750px)" srcset="images/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, images/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x">
-			            <source media="(min-width: 751px)" srcset="images/mediterraneanAlt-1200_large_1x.jpg 1x, images/mediterraneanAlt-2400_large_2x.jpg 2x">
-			            <img class="img-responsive" src="images/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Aegean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
+                        <!-- displays banner image, uses the <picture> element to responsively chooses images that match the device's viewport size and pixel density -->
+                        <source media="(max-width: 600px)" srcset="img/mediterraneanAlt-CropS-800_small_1x.jpg 1x, images/mediterraneanAlt-CropS-1600_small_2x.jpg 2x">
+			            <source media="(max-width: 750px)" srcset="img/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, images/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x">
+			            <source media="(min-width: 751px)" srcset="img/mediterraneanAlt-1200_large_1x.jpg 1x, images/mediterraneanAlt-2400_large_2x.jpg 2x">
+			            <img class="img-responsive" src="img/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Aegean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
                 </picture>
             </section>
             <section class="row">
@@ -41,23 +42,25 @@
                 </div>
             </section>
             <section class="row work-examples">
+                <!-- displays 3 projects in portfolio, and utilizes the srcset attribute to responsively choose the image that will best match the device's pixel density. -->
+                <!-- TODO: Replace sample project themes with real projects in the future once I've built things I'd like to share with potential employers-->
                 <article class="col-md-4 col-sm-6 project alacati-prj">
                     <a href="https://en.wikipedia.org/wiki/Alaçatı">
-                        <img class="img-responsive img-rounded" src="images/tropical-hotel-500_large_1x.jpg" srcset="images/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
+                        <img class="img-responsive img-rounded" src="img/tropical-hotel-500_large_1x.jpg" srcset="img/tropical-hotel-500_large_1x.jpg 1x, images/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
                         <h3 class="portfolio-name">Alacati</h3>
                         <p class="link-addr">https://en.wikipedia.org/wiki/Alaçatı</p>
                     </a>
                 </article>
                 <article class="col-md-4 col-sm-6 project cesme-prj">
                     <a href="https://en.wikipedia.org/wiki/Çeşme">
-                        <img class="img-responsive img-rounded" src="images/mountain-roadAlt-500_large_1x.jpg" srcset="images/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
+                        <img class="img-responsive img-rounded" src="img/mountain-roadAlt-500_large_1x.jpg" srcset="img/mountain-roadAlt-500_large_1x.jpg 1x, images/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
                         <h3 class="portfolio-name">Cesme</h3>
                         <p class="link-addr">https://en.wikipedia.org/wiki/Çeşme</p>
                     </a>
                 </article>
                 <article class="col-md-4 col-sm-6 project instanbul-prj">
                     <a href="https://en.wikipedia.org/wiki/Istanbul">
-                        <img class="img-responsive img-rounded" src="images/istanbul-mosque-500_large_1x.jpg" srcset="images/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
+                        <img class="img-responsive img-rounded" src="img/istanbul-mosque-500_large_1x.jpg" srcset="img/istanbul-mosque-500_large_1x.jpg 1x, images/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
                         <h3 class="portfolio-name">Istanbul</h3>
                         <p class="link-addr">https://en.wikipedia.org/wiki/Istanbul</p>
                     </a>
@@ -70,6 +73,7 @@
             </section>
             <footer class="row">
                 <div class="col-md-12 social-links">
+                    <!-- Found this icon font, along with many others, at the website weloveiconfonts.com -->
                     <p class="s-text-format">To learn more visit me on online:</p>
                     <a class="s-link-format" href="https://www.linkedin.com/">
                         <span class="brandico-linkedin-rect"></span>
