Modify file path for logo to /img

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header class="row">
                 <div class="col-sm-6 site-logo">
                     <!-- vector graphic logo that will resize without distortion to fit any sized device -->
-                    <img class="header-logo" src="logo/logoX4.svg" alt="orange sun gear logo">
+                    <img class="header-logo" src="img/logoX4.svg" alt="orange sun gear logo">
                 </div>
                 <div class="col-sm-6 name-title">
                     <h1 class="name">Matt Hedlund</h1>
