Add TODO to social links section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <footer class="row">
                 <div class="col-md-12 social-links">
                     <!-- Found this icon font, along with many others, at the website weloveiconfonts.com -->
+                    <!-- TODO: optimize linkedin & github profiles before adding links to my personal profiles -->
                     <p class="s-text-format">To learn more visit me on online:</p>
                     <a class="s-link-format" href="https://www.linkedin.com/">
                         <span class="brandico-linkedin-rect"></span>
