--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <picture class="col-md-12 banner-image">
                         <!-- displays banner image, uses the <picture> element to responsively chooses images that match the device's viewport size and pixel density -->
                         <source media="(max-width: 600px)" srcset="img/mediterraneanAlt-CropS-800_small_1x.jpg 1x, img/mediterraneanAlt-CropS-1600_small_2x.jpg 2x">
-			            <source media="(max-width: 750px)" srcset="img/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, img/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x">
-			            <source media="(min-width: 751px)" srcset="img/mediterraneanAlt-1200_large_1x.jpg 1x, img/mediterraneanAlt-2400_large_2x.jpg 2x">
-			            <img class="img-responsive" src="img/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Aegean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
+                        <source media="(max-width: 750px)" srcset="img/mediterraneanAlt-CropM-1000_medium_1x.jpg 1x, img/mediterraneanAlt-CropM-2000_medium_2x.jpg 2x">
+                        <source media="(min-width: 751px)" srcset="img/mediterraneanAlt-1200_large_1x.jpg 1x, img/mediterraneanAlt-2400_large_2x.jpg 2x">
+                        <img class="img-responsive" src="img/mediterraneanAlt-1200_large_1x.jpg" alt="Panoramic view of the Aegean Sea from the Temple of Athena in Ayvacık, Çanakkale, Turkey">
                 </picture>
             </section>
             <section class="row">
@@ -74,12 +74,11 @@
             <footer class="row">
                 <div class="col-md-12 social-links">
                     <!-- Found this icon font, along with many others, at the website weloveiconfonts.com -->
-                    <!-- TODO: optimize linkedin & github profiles before adding links to my personal profiles -->
                     <p class="s-text-format">To learn more visit me on online:</p>
-                    <a class="s-link-format" href="https://www.linkedin.com/">
+                    <a class="s-link-format" href="https://www.linkedin.com/in/matthewhedlund">
                         <span class="brandico-linkedin-rect"></span>
                     </a>
-                    <a class="s-link-format" href="https://github.com">
+                    <a class="s-link-format" href="https://github.com/GreenGiraffe1">
                         <span class="brandico-github-text"></span>
                     </a>
                 </div>
