--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-sm-6 name-title">
                     <h1 class="name">Matt Hedlund</h1>
-                    <h4>Front-End Dev</h4>
+                    <h4>Full-Stack Developer</h4>
                 </div>
             </header>
             <section class="row header-rule">
@@ -38,7 +38,7 @@
             </section>
             <section class="row">
                 <div class="col-md-12 featured-annoucer">
-                    <h2><u class="featured-format">Featured Project Themes</u></h2>
+                    <h2><u class="featured-format">My Anatolian Travels</u></h2>
                 </div>
             </section>
             <section class="row work-examples">
