feat: remove redundant links

--- a/index.html
+++ b/index.html
@@ -47,22 +47,19 @@
                 <article class="col-md-4 col-sm-6 project alacati-prj">
                     <a href="https://en.wikipedia.org/wiki/Alaçatı">
                         <img class="img-responsive img-rounded" src="img/tropical-hotel-500_large_1x.jpg" srcset="img/tropical-hotel-500_large_1x.jpg 1x, img/tropical-hotel-1000_large_2x.jpg 2x" alt="Bev Evi Hotel in Alaçatı Turkey">
-                        <h3 class="portfolio-name">Alacati</h3>
-                        <p class="link-addr">https://en.wikipedia.org/wiki/Alaçatı</p>
+                        <h3 class="portfolio-name">Alaçatı</h3>
                     </a>
                 </article>
                 <article class="col-md-4 col-sm-6 project cesme-prj">
                     <a href="https://en.wikipedia.org/wiki/Çeşme">
                         <img class="img-responsive img-rounded" src="img/mountain-roadAlt-500_large_1x.jpg" srcset="img/mountain-roadAlt-500_large_1x.jpg 1x, img/mountain-roadAlt-1000_large_2x.jpg 2x" alt="View of Aegean sea shore on Turkey's Çeşme Peninsula">
-                        <h3 class="portfolio-name">Cesme</h3>
-                        <p class="link-addr">https://en.wikipedia.org/wiki/Çeşme</p>
+                        <h3 class="portfolio-name">Çeşme</h3>
                     </a>
                 </article>
                 <article class="col-md-4 col-sm-6 project instanbul-prj">
                     <a href="https://en.wikipedia.org/wiki/Istanbul">
                         <img class="img-responsive img-rounded" src="img/istanbul-mosque-500_large_1x.jpg" srcset="img/istanbul-mosque-500_large_1x.jpg 1x, img/istanbul-mosque-1000_large_2x.jpg 2x" alt="Ortaköy Mosque on the Bosphorus River in Beşiktaş, Istanbul, Turkey">
                         <h3 class="portfolio-name">Istanbul</h3>
-                        <p class="link-addr">https://en.wikipedia.org/wiki/Istanbul</p>
                     </a>
                 </article>
             </section>
