feat: replace social icons with ones from fontawesome

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300" rel="stylesheet">
         <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=brandico">
         <link rel="stylesheet" href="css/style.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -73,10 +74,12 @@
                     <!-- Found this icon font, along with many others, at the website weloveiconfonts.com -->
                     <p class="s-text-format">To learn more visit me on online:</p>
                     <a class="s-link-format" href="https://www.linkedin.com/in/matthewhedlund">
-                        <span class="brandico-linkedin-rect"></span>
+                        <!-- <span class="brandico-linkedin-rect"></span> -->
+                        <i class="fab fa-linkedin"></i>
                     </a>
                     <a class="s-link-format" href="https://github.com/GreenGiraffe1">
-                        <span class="brandico-github-text"></span>
+                        <!-- <span class="brandico-github-text"></span> -->
+                        <i class="fab fa-github"></i>
                     </a>
                 </div>
             </footer>
